tests/invalid/c_style_for_initializer_without_initializer.wio
fn Entry(args: string[]) -> i32 {
    for (mut i: i32; i < 3; i += 1) {
    }

    return 0;
}
